[gd_scene load_steps=7 format=3 uid="uid://cimayhin3gk2i"]

[ext_resource type="Script" path="res://level1.gd" id="1_186rx"]
[ext_resource type="Texture2D" uid="uid://bm04tbxn36ntb" path="res://images/360_F_264279006_WDXxV3OHjAOoHqH7iiLDrg23p0947g7U.jpg" id="2_fgsbh"]
[ext_resource type="Texture2D" uid="uid://dydkj88mtewr6" path="res://images/sbbs-barsoap_openangled-removebg-preview.png" id="3_26y3o"]
[ext_resource type="Script" path="res://Player.gd" id="3_oxbvw"]
[ext_resource type="FontFile" uid="uid://xwkrupltlefh" path="res://text fonts/SuperMario256.ttf" id="5_vjpeb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8ojn"]
size = Vector2(102, 62)

[node name="level1" type="Node2D"]
script = ExtResource("1_186rx")

[node name="360F264279006WdXxV3oHjAOoHqH7IiLDrg23p0947g7u" type="Sprite2D" parent="."]
position = Vector2(958.5, 541)
scale = Vector2(3.74125, 3.00556)
texture = ExtResource("2_fgsbh")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("3_oxbvw")

[node name="Sbbs-barsoapOpenangled-removebg-preview" type="Sprite2D" parent="Player"]
position = Vector2(938, 559)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_26y3o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(938, 558)
shape = SubResource("RectangleShape2D_r8ojn")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Time" type="Label" parent="."]
offset_left = 3.0
offset_top = 97.0
offset_right = 164.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("5_vjpeb")
theme_override_font_sizes/font_size = 86
text = "15"

[node name="HP" type="Label" parent="."]
offset_top = 6.0
offset_right = 224.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 71
text = "HP: "

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Level" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 588.0
offset_top = 470.0
offset_right = 1329.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("5_vjpeb")
theme_override_font_sizes/font_size = 166
text = "Level 1"

[node name="You lost" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 588.0
offset_top = 470.0
offset_right = 1329.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("5_vjpeb")
theme_override_font_sizes/font_size = 166
text = "You Lost!"

[node name="Score" type="Label" parent="."]
offset_left = 1607.0
offset_top = 11.0
offset_right = 1902.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("5_vjpeb")
theme_override_font_sizes/font_size = 41
text = "100"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
